--- a/docbuild/api/Scrapbook101core.Program.yml
+++ b/docbuild/api/Scrapbook101core.Program.yml
@@ -21,11 +21,12 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Program
     path: ../Scrapbook101core/Program.cs
-    startLine: 18
+    startLine: 21
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
-  summary: "\nDefines the entry point into the Scrapbook ASP.NET Core web application. \nASP.NET core apps configure and launch a host. The host is responsible for the app startup\nand lifetime management. For more information,  \n<a href=\"https://docs.microsoft.com/aspnet/core/fundamentals/host/web-host?view=aspnetcore-2.2\">ASP.NET Core Web Host</a>.\n"
+  summary: "\nDefines the entry point into the Scrapbook ASP.NET Core web application. \nASP.NET core apps configure and launch a host. The host is responsible for the app startup\nand lifetime management. For more information,  \n<a href=\"https://docs.microsoft.com/aspnet/core/fundamentals/host/web-host?view=aspnetcore-3.0\">ASP.NET Core Web Host</a>.\n"
+  remarks: "\nProgram remarks.\n"
   example: []
   syntax:
     content: public class Program
@@ -64,7 +65,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Main
     path: ../Scrapbook101core/Program.cs
-    startLine: 24
+    startLine: 27
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -105,7 +106,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: CreateWebHostBuilder
     path: ../Scrapbook101core/Program.cs
-    startLine: 35
+    startLine: 38
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
