--- a/docbuild/api/Scrapbook101core.Scrapbook101Configuration.yml
+++ b/docbuild/api/Scrapbook101core.Scrapbook101Configuration.yml
@@ -34,10 +34,12 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Scrapbook101Configuration
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 7
+    startLine: 10
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
+  summary: "\nRepresents the application settings definied in <code>appsettings.json.</code>\n"
+  example: []
   syntax:
     content: public class Scrapbook101Configuration
     content.vb: Public Class Scrapbook101Configuration
@@ -75,7 +77,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Current
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 9
+    startLine: 12
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -108,7 +110,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: .ctor
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 11
+    startLine: 14
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -138,7 +140,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: AddTestAssets
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 16
+    startLine: 19
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -173,7 +175,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: ApplicationName
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 17
+    startLine: 20
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -208,7 +210,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: AssetBasePath
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 18
+    startLine: 21
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -243,7 +245,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: AuthKey
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 19
+    startLine: 22
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -278,7 +280,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: BingMapKey
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 20
+    startLine: 23
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -313,7 +315,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryDocumentType
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 21
+    startLine: 24
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -348,7 +350,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: CollectionId
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 22
+    startLine: 25
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -383,7 +385,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: DatabaseId
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 23
+    startLine: 26
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -418,7 +420,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Endpoint
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 24
+    startLine: 27
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -453,7 +455,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: ItemDocumentType
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 25
+    startLine: 28
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -488,7 +490,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: NoAssetImage
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 26
+    startLine: 29
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -523,7 +525,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: TestCategories
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 27
+    startLine: 30
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
@@ -558,7 +560,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: TestDocuments
     path: ../Scrapbook101core/Models/Configuration.cs
-    startLine: 28
+    startLine: 31
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
