Update get-started page.

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -273,7 +273,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/about-this-site.html",
-          "hash": "at99M63D/BL38Vo8S+5hCA=="
+          "hash": "dMbLL9PmJAZNZFZsR9nRUw=="
         }
       },
       "is_incremental": true,
@@ -285,7 +285,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/category-document.html",
-          "hash": "LfFv7ETVefJNj4L7ZAl05g=="
+          "hash": "Yp2t4orytlCx+P95CmzjzQ=="
         }
       },
       "is_incremental": true,
@@ -297,10 +297,10 @@
       "output": {
         ".html": {
           "relative_path": "articles/code-discussion.html",
-          "hash": "/rxxmPmH0k+co7uyCgH/MA=="
+          "hash": "A7gSgdWhtTIBzKpzsNkqzQ=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -309,10 +309,10 @@
       "output": {
         ".html": {
           "relative_path": "articles/get-started.html",
-          "hash": "4p1zDCwmAr2tFNVely1GKg=="
+          "hash": "NbLANmTcaXheyqAAWaIpaw=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -321,7 +321,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/handling-assets.html",
-          "hash": "mBbuyOkKUCZNftHPIsuEDQ=="
+          "hash": "SwmvZ8AZowo//j5tWofNKw=="
         }
       },
       "is_incremental": true,
@@ -345,7 +345,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/item-document.html",
-          "hash": "ilSHMrmQTpSCPrpVVOi0ng=="
+          "hash": "uTKZ1pfXIWeCKL+zv1Wk4w=="
         }
       },
       "is_incremental": true,
@@ -357,10 +357,10 @@
       "output": {
         ".html": {
           "relative_path": "articles/next-steps.html",
-          "hash": "+fmyzGFBWTWlkkVKyIw5HA=="
+          "hash": "Wb/75YMATIjAHvaBqWthKw=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -369,7 +369,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/technology-overview.html",
-          "hash": "yrAbf+3mhIxfQPrfYsmdmA=="
+          "hash": "JqBP8n1I5gdEn1G3R26XZQ=="
         }
       },
       "is_incremental": true,
@@ -487,24 +487,24 @@
         "skipped_file_count": 0
       },
       "processors": {
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build",
-          "total_file_count": 0,
-          "skipped_file_count": 0
-        },
         "ConceptualDocumentProcessor": {
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 11,
-          "skipped_file_count": 11
+          "skipped_file_count": 10
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 20,
           "skipped_file_count": 20
+        },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build",
+          "total_file_count": 0,
+          "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
           "can_incremental": false,
